fixed overflow-x on home page, prices tag on cart page

--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,9 @@ body {
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+
+@media (max-width: 575px) {
+	* {
+		overflow-x: hidden;
+	}
+}
